basic UI elements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Demo | Home</title>
+    <link rel="stylesheet" href="webjars/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
+    <link th:href="@{/main.css}" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <div class="container">
+        <div class="row">
+           <div class="col-md12 box">
+               <h3 class="title">Pivot Table - Demo | Home</h3>
+
+               <div class="content col-4">
+                   <a href="/upload" class="btn btn-success btn-block">Insert Data CSV</a> <br/>
+                   <a href="/view" class="btn btn-info btn-block">View Data</a>
+               </div>
+           </div>
+        </div>
+    </div>
 </body>
 </html>
