--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Demo | View</title>
+    <link rel="stylesheet" href="webjars/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
+    <link th:href="@{/main.css}" rel="stylesheet"/>
 </head>
 <body>
+<div class="container">
+    <div class="row">
+        <div class="col-md12 box">
+            <h3 class="title">Pivot Table - Demo | View</h3>
 
+            <div class="col-3">
+                <label for="sel1">Select Year:</label>
+                    <select class="form-control" id="sel1" name="sellist1">
+                        <option>2009</option>
+                        <option>2010</option>
+                        <option>2011</option>
+                        <option>2012</option>
+                    </select>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
