minor changes fixed

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -16,7 +16,7 @@
             <h3 class="title">Pivot Table - Demo | Upload</h3>
 
             <div class="contentUp col-6">
-                <p class="text-center font-weight-bold">select your csv File</p>
+                <p class="text-center font-weight-bold">select your pivot table</p>
                 <form method="post" th:action="@{/FileUpload}" enctype="multipart/form-data">
                     <div class="custom-file">
                         <input type="file" accept=".csv" class="custom-file-input" id="File" name="File" required>
